# phrack-issue-manager

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml  rust-build.yml
src/: config.rs  main.rs  phrack_issue_manager_error.rs
src/export/: epub_export.rs  mod.rs  pdf_export.rs  txt_export.rs
