[package]
name = "phrack-issue-manager"
version = "0.1.0"
edition = "2024"
description = "A command-line tool for managing and downloading Phrack magazine issues"
license-file = "LICENSE"
repository = "https://github.com/hasanen/phrack-issue-manager"
homepage = "https://github.com/hasanen/phrack-issue-manager"
documentation = "https://github.com/hasanen/phrack-issue-manager#readme"
keywords = ["phrack", "cli", "downloader", "magazine", "epub"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
comfy-table = "7.2.1"
directories-next = "2.0.0"
enum-iterator = "2.3.0"
epub-builder = "0.7"
futures = "0.3.31"
genpdf = "0.2.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.9.5"
