[package]
name = "phrack-issue-manager"
version = "0.1.1"
edition = "2024"
description = "A command-line tool for managing and downloading Phrack magazine issues"
license = "MIT"
repository = "https://github.com/hasanen/phrack-issue-manager"
homepage = "https://github.com/hasanen/phrack-issue-manager"
documentation = "https://github.com/hasanen/phrack-issue-manager#readme"
keywords = ["phrack", "cli", "downloader", "magazine", "epub"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
comfy-table = "7.2.1"
directories-next = "2.0.0"
enum-iterator = "2.3.0"
epub-builder = "0.8"
futures = "0.3.31"
genpdf = "0.2.0"
regex = "1.12.3"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.9.8"
